--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: sathish8329/test:12
+      - image: dockertrain44/test:12
         name: flaskdemo
         resources: {}
 status: {}
